# bohol-marketing

./: .dockerignore  .gitattributes  .gitignore  .railwayignore  AGENTS.md  Blueprint-Marketing-Automation-Claude-Code-Spec.md  Blueprint-Marketing-SAFETY-ADDENDUM.md  CAMPAIGN-ISRAEL.md  CLAUDE.md  DAVID-GO-LIVE-HANDOFF.md  EMAIL-SEQUENCE.md  MASTER-HOOKS.md  villa-sales-agent.jsx
.claude/: settings.json
BOHOL Project/: CAMPAIGN-ISRAEL.md  CAMPAIGN-PHILIPPINES.md  CLAUDE.md  CRM-LEAD-SCORING.md  MASTER-HOOKS.md  META-GOOGLE-ADS.md  VILLA-MARKETING-SKILL.md  WHATSAPP-FLOWS.md  bohol-panglao-growth-report.md  find_me.txt
_preview/: all_15_days.json  day_10_ads.json  day_10_content.json  day_10_email.json  day_11_ads.json  day_11_content.json  day_11_email.json  day_11_whatsapp.json  day_12_ads.json  day_12_content.json  day_12_email.json  day_13_ads.json  day_13_content.json  day_13_email.json  day_14_ads.json  day_14_content.json  day_14_email.json  day_15_content.json  day_15_email.json  day_15_whatsapp.json  day_1_ads.json  day_3_content.json  day_3_email.json  day_4_ads.json  day_4_content.json  day_4_whatsapp.json  day_5_ads.json  day_5_content.json  day_6_ads.json  day_6_content.json  day_7_ads.json  day_7_content.json  day_8_ads.json  day_8_content.json  day_8_email.json  day_9_ads.json  day_9_content.json  day_9_email.json
_status/: campaign_state.json  (+2 more)
langgraph-worker/: .env.example  Dockerfile  pyproject.toml
langgraph-worker/src/: config.py  main.py
langgraph-worker/src/graph/: cmo_graph.py  content_pipeline.py  council.py  lead_pipeline.py
(+762 files in other folders)
