[project]
name = "blue-everest-langgraph"
version = "0.1.0"
description = "LangGraph orchestration for Blue Everest AI Marketing Department"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.4.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "anthropic>=0.52.0",
    "supabase>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
